# sceadan

./: .gitignore  .gitmodules  LICENSE.txt  Makefile.am  README.md  bootstrap.sh  configure.ac  libtool  sceadan_configure.m4
Tools/: auto_train.sh
data_test/bad/: tbird_msf.txt
data_test/good/: csv.txt  doc.txt  flv.txt  gif.txt  html.txt  jpg.txt  wmv.txt  zip.txt
doc/: Makefile.am  README.md  customer_training.md  openmp_test.sh  performance.txt  training_procedure.md
liblinear-1.94-omp/: Makefile.am  README.sceadan  linear.cpp  train.c  tron.cpp  tron.h
m4/: README.txt  slg_gcc_all_warnings.m4  slg_searchdirs.m4
src/: AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.am~  Makefile.defs  Makefile.defs~  Makefile.in  NEWS  README  config.h  config.h.in  config.status  configure  configure.ac  configure.ac~  file_type.h  main.c  main.cpp  mcompile.cpp  model  model.ucv-bcv.20130509.c256.s2.e005.REMOVED.git-id  ngram.h  restart.c  sceadan.c  sceadan.cpp  sceadan.h  sceadan.map  sceadan_app  sceadan_configure.m4  sceadan_configure.m4~  sceadan_model_precompiled.c  sceadan_model_precompiled.c.REMOVED.git-id  sceadan_predict.c  sceadan_predict.h  sceadan_processblk.c  sceadan_processblk.h  test.sh
src/.deps/: main.Po  restart.Po  sceadan_predict.Po  sceadan_processblk.Po
src/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
src/m4/: gcc_all_warnings.m4
test_data/DOC/: 037605.doc  076809.doc  157087.doc  167680.doc  201047.doc  213810.doc  302603.doc  306338.doc  360050.doc  369980.doc  398058.doc  417550.doc  466066.doc  491218.doc  522040.doc  525396.doc  530074.doc  533505.doc  583288.doc  584947.doc
test_data/DOCX/: 214825.docx  216689.docx  257125.docx  271644.docx  278266.docx  304089.docx  337861.docx  372437.docx  406729.docx  409409.docx  439210.docx  489061.docx  499269.docx  596393.docx
test_data/KREL/: krel01  krel03
testdata/SingleFilePerType/: avi.txt  bmp.txt  exe.txt  java.txt  js.txt  json.txt  mp3.txt  pdf.txt  tif.txt  urlencoded.txt
testdata/bad/: tbird.txt  text.txt
testdata/good/: a85.txt  b64.txt  bz2.txt  dll.txt  docx.txt  gz.txt  jb2.txt  log.txt  m4a.txt  mov.txt  mp4.txt  png.txt  ppt.txt  ps.txt  pst.txt  rtf.txt  wav.txt  xls.txt  xlsx.txt  xml.txt
tools/: Makefile  Makefile.am  README.md  README_liblinear.txt  easy.py  extract_filename.py  grid.py  gridregression.py  multiprocessing_example.py  sceadan_train.py  test.sh  threaddemo.py  ttable.py
tools/sample_run/: heart_scale.grid  heart_scale.grid.out  heart_scale.model  heart_scale.predict  heart_scale.test  heart_scale.train  log
